--- a/styles.css
+++ b/styles.css
@@ -80,17 +80,21 @@ input {
     display: block;
     width: 100%;
     padding: 1rem 1.5rem;
-    margin-bottom: 1.2rem;
     border: 1px solid var(--grayish-blue);
     border-radius: 0.5rem;
     font-family: inherit;
     font-size: 1rem;
     font-weight: 600;
+    margin-top: 1.2rem;
     transition: all 0.2s ease-in-out;
 }
 
+#form label:first-child input {
+    margin-top: 0;
+}
+
 input.error {
-    border: 1px solid var(--red);
+    border: 2px solid var(--red);
 }
 
 input:hover,
@@ -109,6 +113,7 @@ button {
     font-family: inherit;
     font-size: 1rem;
     text-transform: uppercase;
+    margin-top: 1.2rem;
     margin-bottom: 1rem;
 }
 
@@ -134,14 +139,26 @@ small span {
     padding-right: 30px;
 }
 
+div.error-message {
+    font-style: italic;
+    font-size: 12px;
+    color: var(--red);
+    text-align: right;
+    padding-top: 5px;
+}
+
 .toggle-icon {
     position: absolute;
     right: 10px;
-    top: 50%;
+    top: 63%;
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 18px;
     color: #888;
+}
+
+.toggle-icon.error {
+    top: 50%;
 }
 
 .toggle-icon::before {
